packages/next-swc/crates/core/tests/errors/styled-jsx/two-children/input.js
export default () => (
  <div>
    <style jsx>
      {`.p {}`}
      {`.p {}`}
    </style>
  </div>
)
